Round actions row coners in Chrome OS notification.

In Chrome OS, notification corners are rounded. However, when the
actions row is expanded, its corners were not rounded.

TEST=manual
BUG=789056

Change-Id: Id29f3d1d193a682c478249089ae4bfa30c52fad3